--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}
   Записи сообщества {{ group.title }}
 {% endblock %}
-
 {% block content %}
   <h1>{{ group.title }}</h1>
   <p>{{ group.description }}</p>
@@ -17,6 +17,9 @@
         <li>
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
+        {% thumbnail post.image "300x100" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
         <p>{{ post.text|linebreaks }}</p>
           <a href="{% url 'posts:post_detail' post.id %}">
             Подробная информация
