--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -5,6 +5,8 @@
   Последние обновления на сайте
 {% endblock %}
 {% block content %}
+  <h4>Добро пожаловать в мой блог! Здесь мы обсуждаем интересные мероприятия и события.
+        Куда можно сходить с пользой и где весело провести время. Присоединяйся!</h4>
   {% include 'includes/switcher.html' %}
   <h1>Последние обновления на сайте</h1>
     {% for post in page_obj %}
