--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
+{% load thumbnail %}
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
-  <h1>Привет, я автор</h1>
+  <h1>Привет, меня зовут Юлиана, я автор.</h1>
   <p>
-    Тут я размещу информацию о себе, используя свои умения верстать.
-    Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. 
+    Я решила круто изменить свою жизнь - и вот я в IT!
   </p>
+  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+                <img class="card-img my-2" src="{{ im.url }}">
+              {% endthumbnail %}
 {% endblock %} 
